# tennessee-eastman-lab

./: .gitignore  README.md
tennessee-eastman-process/: temain.f  teprob.f
tennessee-eastman-service/: Cargo.toml  README.md
tennessee-eastman-service/cases/: base_case.toml
tennessee-eastman-service/core/: Cargo.toml  README.md
tennessee-eastman-service/core/src/: bus.rs  dynamics.rs  init.rs  initial_state.rs  inputs.rs  integrator.rs  lib.rs  outputs.rs  params.rs  plant.rs  state.rs
tennessee-eastman-service/core/src/actuator/: actuator.rs
tennessee-eastman-service/core/src/dynamics/: model.rs  tennessee.rs
tennessee-eastman-service/core/src/sensor/: sensor.rs
tennessee-eastman-service/service/: Cargo.toml
tennessee-eastman-service/service/src/: config.rs  interface.rs  main.rs  metadata.rs  runtime.rs
